# onkologia-okulistyczna

./: .gitignore  README.md  data.yaml  docker-compose-label-studio.yml  requirements.txt
Ophthalmic_Scans/: .gitignore  generated.dvc  metadata_files.dvc  processed.dvc  prompts.dvc  raw.dvc  splits.dvc
Ophthalmic_Scans/.dvc/: config
app/: README.md  docker-compose.yml
app/backend/: Dockerfile  inference_service.py  main.py  pyproject.toml  run.py  unet_arch.py
app/frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js
cluster_scripts/: confusion_matrix_images.sh  eval_oct_images.sh  eval_oct_images_qwen.sh  eval_oct_images_qwen_council.sh  eval_unet.sh  schedule_unet_train_win.ps1  test_unet.sh  test_yolo.sh  train_unet.sbatch  train_unet.sh  train_unet_tensorboard.sh  train_yolo.sh
dataset_scripts/: explore_labeled_images.py  print_split_details.py  utils.py  validate_dataset.py
explore_dataset/: README.md  explorer.py  index.html  index.js  package-lock.json  package.json  script.js  style.css
generated_images_utils/: split_grid_to_single_images.py
label-studio-local-setup/: README.md  generate_tasks.py  labelling_interface.xml  serve.py
label_studio_labels_import/: export_label_studio.py  import.py
prepare_dataset/: README.md  augment.py  gen_split.py  prepare_dataset.py  resize_images.py  split_utils.py  yolo_labels_utils.py
train_model/: README.md  confusion_matrix_images.py  data.yaml  test_unet.py  test_yolo.py  train_unet.py  train_yolo.py  unet_utils.py  utils.py
(+34 files in other folders)
