[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "ultralytics>=8.4.6",
    "uvicorn>=0.40.0",
]
